
ChangeLog
 [ + added, - removed, * changed ]
 * 15Mar2012 Fixed versioning number for lib MPI+OMP when using dyninst
 + 13Mar2012 Instrumentation for pthread_exit
 * 09Mar2012 Fixes in the #pragma omp parallel sections constructs in icc/gcc.
 * 06Mar2012 First parallel event when thread > 1 was missing its HWC.
             XML parser was looking for sort-address instead of sort-addresses
             within <merge> block.
             Several exit cleanups.
             Documentation is no longer generated at make, but distributed
               in its PS/PDF/HTML forms. This allows having the user-guide
               without needing latex/dvi2ps/dvipdf/latex2html
 * 27Feb2012 Fixes in the instrumentation of worksharings for Intel/OpenMP
 * 24Feb2012 Extrae 2.2.1 is released!
 * 24Feb2012 Fixed a bug in the name of the nodes in the row file
 * 24Feb2012 Fixes in the instrumentation of GNU/OpenMP
 * 01Feb2012 Added CUDA instrumentation through CUPTI
 + 27Jan2012 Support for BG/Q machines
 * 23Jan2012 Fix when handling MPI_ANY_TAG in MPI calls (also for mpimpi2prv)
 * 19Jan2012 Improved support for Intel OpenMP rte. Some files autogenerated.
 + 03Jan2012 Support to instrument Intel OpenMP rte v11/v12 through LD_PRELOAD.
 * 01Dec2011 Improved support for DynInst (C&Fortran bugs in MT)
 * 01Dec2011 Improved support for instrumenting NANOS+MPI
 * 30Nov2011 Increased verbosity of papi_best_set
 * 28Nov2011 Fixed a bug that appeared when creating communicators
 * 14Nov2011 Added support to MAC OS X and improved support to FreeBSD
 * 07Nov2011 Extrae 2.2.0 is released!
 * 07Nov2011 Made --with-unwind, --with-papi, --with-mpi, --with-dyninst mandatory.
             Can be avoided through the respective --without.
 * 07Nov2011 Autodetect whether --enable-posix-clock is needed.
 * 25Oct2011 Adding thread names, starting by CUDA
 + 19Oct2011 Support for MPI+OpenMP applications using Dyninst launcher
 * 17Oct2011 Translation of @ of CUDA kernels into kernel names