@@ -2,6 +2,7 @@
 ChangeLog
  [ + added, - removed, * changed ]
  * 15Mar2012 Fixed versioning number for lib MPI+OMP when using dyninst
+             Fixed nesting creation of pthreads.
  + 13Mar2012 Instrumentation for pthread_exit
  * 09Mar2012 Fixes in the #pragma omp parallel sections constructs in icc/gcc.
  * 06Mar2012 First parallel event when thread > 1 was missing its HWC.
